# yammar_ws

./: .gitignore  2021-06-02-12-54-15.bag  README.md  data20210523 105058.txt  data20210528 153506.txt  data20210528 162254.txt  data20210528 162317.txt  data20210528 162517.txt  data20210528 162546.txt  data20210528 162808.txt  data20210528 162832.txt  data20210604 143526.txt  speed.txt
corr/: current_cor.txt  height_cor.txt
experiment20201113/: [2020-11-14 13:29:22:335]_speed.txt  [2020-11-14 13:37:39:745]_speed.txt  [2020-11-14 13:48:49:009]_speed.txt  [2020-11-14 14:23:07:441]_speed.txt  [2020-11-14 14:24:39:032]_speed.txt  [2020-11-14 14:38:41:126]_speed.txt  [2020-11-14 14:41:27:784]_speed.txt  [2020-12-11 15:25:11:114]_speed.txt  [2020-12-11 15:32:19:674]_io_rgbd.txt  [2020-12-11 15:40:10:896]_io_rgbd.txt  [2020-12-11 15:47:42:234]_io_rgbd.txt  [2020-12-11 15:49:11:037]_io_rgbd.txt  [2020-12-11 15:52:43:314]_io_rgbd.txt  [2020-12-11 17:20:38:413]_io_rgbd.txt  [2020-12-11 17:26:01:978]_io_rgbd.txt  [2020-12-11 17:28:29:849]_io_rgbd.txt  [2020-12-11 17:33:39:521]_io_rgbd.txt  [2020-12-11 17:36:21:353]_io_rgbd.txt
speed_result/: [2020-12-25 16:15:08:213]_speed.txt  [2020-8-13 13:25:54:349]_speed.txt  [2020-8-13 13:38:03:566]_speed.txt  [2020-8-13 13:43:19:388]_speed.txt  [2020-8-13 13:54:40:636]_speed.txt  [2020-8-13 13:58:59:223]_speed.txt  [2020-8-13 15:44:59:503]_speed.txt  [2020-8-13 15:53:40:968]_speed.txt  [2020-8-13 15:54:35:599]_speed.txt  [2020-8-13 15:55:37:152]_speed.txt  [2020-8-13 16:19:13:879]_speed.txt  [2020-9-3 19:40:52:918]_speed.txt  [2020-9-3 19:45:07:096]_speed.txt  [2020-9-3 19:48:41:732]_speed.txt  [2021-3-14 19:58:17:971]_speed.txt  [2021-3-14 20:12:45:092]_speed.txt  [2021-3-14 20:14:06:115]_speed.txt  [2021-3-14 20:15:37:322]_speed.txt  [2021-3-14 20:18:14:970]_speed.txt  [2021-3-14 20:19:51:516]_speed.txt  [2021-3-14 20:1:15:358]_speed.txt  [2021-3-14 20:22:10:052]_speed.txt  [2021-3-14 20:2:16:745]_speed.txt  [2021-3-14 20:4:14:077]_speed.txt  [2021-3-14 20:5:31:700]_speed.txt  [2021-3-14 20:8:04:507]_speed.txt  [2021-3-15 11:48:37:562]_speed.txt  [2021-3-15 11:49:32:563]_speed.txt  [2021-3-15 11:51:43:962]_speed.txt  [2021-3-15 12:16:01:671]_speed.txt  [2021-3-15 12:29:31:791]_speed.txt  [2021-3-15 12:55:33:871]_speed.txt  [2021-3-15 12:6:30:418]_speed.txt  [2021-3-15 12:7:19:359]_speed.txt  [2021-3-15 13:0:32:095]_speed.txt  [2021-3-15 14:13:47:276]_speed.txt  [2021-3-15 14:19:00:135]_speed.txt  [2021-3-15 14:20:56:245]_speed.txt  [2021-3-15 14:23:04:048]_speed.txt  [2021-3-15 14:25:51:587]_speed.txt  (+5 more)
src/Qt_gui_test/: CMakeLists.txt
src/auto_driver/: CMakeLists.txt  package.xml
src/border_height_detect/: CMakeLists.txt  ground_plane_file.txt  helper.py  main.cpp  main_prev.cpp  package.xml  standard_line_file.txt  uncut_plane.txt
src/border_height_detect/src/: border_height_detect_node.cpp  fit.h
src/border_lingang/: CMakeLists.txt  package.xml
src/border_lingang/src/: main.cpp
src/border_msgs/: CMakeLists.txt  package.xml
src/boud_rgbd/: main.cpp
src/cloud_convertor/: CMakeLists.txt  package.xml
src/control485/: CMakeLists.txt
src/control_reap_height_by_remote_io/: CMakeLists.txt  package.xml
src/controldis/: CMakeLists.txt  data.txt  data1.txt  data2.txt  data20210426 104116.txt  data22.txt  data3.txt  data4.txt  data5.txt  data6.txt  data7.txt  data9.txt  data93.txt  data_last.txt  package.xml
src/controlturn/: CMakeLists.txt
src/curve_point_z_msgs/: CMakeLists.txt  package.xml
src/grain_height_detecte/: CMakeLists.txt  package.xml
src/height_controller/: CMakeLists.txt  package.xml
src/height_msgs/: CMakeLists.txt  package.xml
src/learning_communication/: CMakeLists.txt  listener.cpp  pid.cpp  talker.cpp
src/multicamera/: CMakeLists.txt  calib.txt  cam_ip  package.xml
src/multicamera/src/: main.cpp  main_realtime.cpp
src/serialPort/: CMakeLists.txt
src/smach_tutorials/: CMakeLists.txt
src/speed_result/: [2020-8-13 13:33:46:336]_speed.txt  [2020-8-13 13:45:56:648]_speed.txt  [2020-8-13 13:50:19:386]_speed.txt  [2020-8-13 13:57:05:060]_speed.txt  [2020-8-13 13:58:15:630]_speed.txt  [2020-8-13 14:13:33:214]_speed.txt  [2020-8-13 15:47:08:318]_speed.txt  [2020-8-13 15:51:41:799]_speed.txt  [2020-8-13 16:2:23:115]_speed.txt  [2020-9-18 21:37:37:802]_speed.txt  [2020-9-3 21:17:55:436]_speed.txt  [2020-9-3 21:2:36:763]_speed.txt  [2020-9-3 21:3:55:707]_speed.txt  [2020-9-3 21:8:54:984]_speed.txt  [2020-9-4 13:51:58:560]_speed.txt  [2020-9-4 14:32:09:295]_speed.txt  _speed.txt  (+2 more)
(+111 files in other folders)
